<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>whycon_ros</name>
  <version>2.3.0</version>
  <description>Implements the WhyCon localization system into ROS.</description>

  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
  <author email="tomas.krajnik@fel.cvut.cz">Tom Krajnik</author>
  <license>MIT</license>

  <url type="website">https://github.com/gestom/whycon-orig</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>rosidl_default_generators</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sdl</depend>
  <depend>sdl-ttf</depend>

  <exec_depend>libncurses-dev</exec_depend>
  <!-- <exec_depend>libmagick++-dev</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
